add MemorySegmentByteArray impl using methodHandle