@@ -14,6 +14,7 @@ repositories {
 
 dependencies {
     api group: 'io.vproxy', name: 'vjson', version: '1.5.4-jdk9'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 compileJava {
@@ -22,6 +23,18 @@ compileJava {
 
 sourceCompatibility = 11.0
 targetCompatibility = 11.0
+
+compileTestJava {
+    sourceCompatibility = 21
+    targetCompatibility = 21
+
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test) {
+    jvmArgs += '--enable-preview'
+    jvmArgs += '--enable-native-access=ALL-UNNAMED'
+}
 
 java {
     withSourcesJar()
